fix overflow issue with code example blocks

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -452,7 +452,6 @@ pre {
 }
 
 pre code {
-  white-space: pre;
   display: inline-block;
   padding: 0.75rem 1rem;
 }
